<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity"
    android:background="@color/lite_bg">


    <RelativeLayout
        android:id="@+id/rel_layout1"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:background="@drawable/main_bg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:layout_alignParentTop="true"
            android:background="@android:color/transparent">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/coins"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_alignParentEnd="true"
                    android:layout_marginEnd="30dp"
                    android:layout_marginRight="30dp"
                    android:drawableEnd="@drawable/money"

                    android:drawablePadding="12dp"
                    android:gravity="center_vertical"
                    android:text="4500"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    android:textStyle="bold">

                </TextView>
            </RelativeLayout>

        </androidx.appcompat.widget.Toolbar>

        <RelativeLayout
            android:id="@+id/rel_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            tools:ignore="ExtraText">

            <ImageView
                android:id="@+id/profileImage"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_centerVertical="true"
                android:layout_marginStart="16dp"
                android:background="@android:color/transparent"
                android:padding="2dp"
                android:scaleType="centerCrop"
                android:src="@drawable/profile"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@+id/profileImage"
                android:gravity="center_vertical"
                android:orientation="vertical"
                android:padding="8dp">

                <TextView
                    android:id="@+id/name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="User Name"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/name2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="email@gmail.com"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:textStyle="bold" />

            </LinearLayout>

        </RelativeLayout>

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="@+id/rel_layout1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rel_layout1"
        tools:ignore="MissingConstraints,NotSibling,UnknownId"
        android:padding="4dp">

        <androidx.cardview.widget.CardView
            android:id="@+id/card1"
            android:layout_width="0dp"
            android:layout_height="130dp"
            android:layout_weight="1"
            app:cardCornerRadius="12dp"
            app:cardUseCompatPadding="true"
            app:cardBackgroundColor="@color/white">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:layout_width="42dp"
                    android:layout_height="42dp"
                    android:layout_centerInParent="true"
                    android:src="@drawable/cashin" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_centerHorizontal="true"
                    android:padding="8dp"
                    android:text="cash In" />
            </RelativeLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/card2"
            android:layout_width="0dp"
            android:layout_height="130dp"
            android:layout_weight="1"
            app:cardCornerRadius="12dp"
            app:cardUseCompatPadding="true"
            app:cardBackgroundColor="@color/white">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_centerInParent="true"
                    android:src="@drawable/cashout" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_centerHorizontal="true"
                    android:padding="8dp"
                    android:text="cash out" />
            </RelativeLayout>

        </androidx.cardview.widget.CardView>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">


        <LinearLayout
            android:id="@+id/linearLayout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="4dp"
            >

            <androidx.cardview.widget.CardView
                android:id="@+id/card3"
                android:layout_width="0dp"
                android:layout_height="130dp"
                android:layout_weight="1"
                app:cardCornerRadius="12dp"
                app:cardUseCompatPadding="true"
                app:cardBackgroundColor="@color/white">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_centerInParent="true"
                        android:src="@drawable/send" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentBottom="true"
                        android:layout_centerHorizontal="true"
                        android:padding="8dp"
                        android:text="Send Money" />
                </RelativeLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/card4"
                android:layout_width="0dp"
                android:layout_height="130dp"
                android:layout_weight="1"
                app:cardCornerRadius="12dp"
                app:cardUseCompatPadding="true"
                app:cardBackgroundColor="@color/white">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_centerInParent="true"
                        android:src="@drawable/saving" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentBottom="true"
                        android:layout_centerHorizontal="true"
                        android:padding="8dp"
                        android:text="Deposits" />
                </RelativeLayout>

            </androidx.cardview.widget.CardView>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="4dp"
            >

            <androidx.cardview.widget.CardView
                android:id="@+id/card5"
                android:layout_width="0dp"
                android:layout_height="130dp"
                android:layout_weight="1"
                app:cardCornerRadius="12dp"
                app:cardUseCompatPadding="true"
                app:cardBackgroundColor="@color/white">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:layout_width="45dp"
                        android:layout_height="42dp"
                        android:layout_centerInParent="true"
                        android:src="@drawable/transfer" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentBottom="true"
                        android:layout_centerHorizontal="true"
                        android:padding="8dp"
                        android:text="Transactions" />
                </RelativeLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/card6"
                android:layout_width="0dp"
                android:layout_height="130dp"
                android:layout_weight="1"
                app:cardCornerRadius="12dp"
                app:cardUseCompatPadding="true"
                app:cardBackgroundColor="@color/white">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:layout_width="42dp"
                        android:layout_height="42dp"
                        android:layout_centerInParent="true"
                        android:src="@drawable/bulb" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentBottom="true"
                        android:layout_centerHorizontal="true"
                        android:padding="8dp"
                        android:text="Accounts" />
                </RelativeLayout>

            </androidx.cardview.widget.CardView>

        </LinearLayout>

        <Button
            android:id="@+id/button2"
            android:layout_width="match_parent"
            android:layout_height="54dp"
            android:layout_margin="20dp"
            android:background="@color/white"
            android:text="Log Out" />


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>